# RKHunter

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-annotator.txt  requirements-yolo.txt
.github/workflows/: ci.yml
configs/: dataset.yaml  model.yaml
docs/: annotation-guide.md  annotation-tool.md  architecture.md  authoritative-data-sources.md  data-guide.md  environment-setup.md  implementation-plan.md  low-manual-data-plan.md  metbull-manual-export.md  visual-baseline-classification.md  workflow.md  yolo-smoke-test.md
scripts/: build_visual_baseline_classification_dataset.ps1  build_yolo_smoke_dataset.py  dataset_summary.py  predict_classifier.py  predict_yolo.py  prepare_metbull_index.ps1  run_annotation_tool.py  train_classifier.py  train_yolo.py  validate_annotation_pipeline.py
src/rkhunter/: __init__.py  config.py  detect.py
src/rkhunter/annotator/: __init__.py  api.py  database.py  models.py  service.py
src/rkhunter/annotator/adapters/: __init__.py  base.py  grounding_dino.py  registry.py  ultralytics_yolo.py
src/rkhunter/annotator/static/: app.js  index.html  styles.css
tests/: test_annotation_tool.py  test_yolo_scripts.py
