[project]
name = "rkhunter"
version = "0.1.0"
description = "AI-assisted meteorite candidate detection from aerial imagery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
