[project]
name = "rkhunter"
dynamic = ["version"]
description = "AI-assisted meteorite candidate detection from aerial imagery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
annotator = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "httpx>=0.27,<1",
  "Pillow>=10,<13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rkhunter.annotator" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.dynamic]
version = {attr = "rkhunter.__version__"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
